修正網頁載入時有殘影的問題
在modal加入display:none;載入後移除

--- a/css/main.css
+++ b/css/main.css
@@ -78,21 +78,25 @@ html {
 		/*Hide*/
 		.hide{
 			visibility: hidden;
+			/*display: none;*/
 			opacity: 0;
-			-webkit-transition: visibility 0s 0.5s, opacity 0.5s linear;
+			/*-webkit-transition: visibility 0s 0.5s, opacity 0.5s linear;
 			-moz-transition: visibility 0s 0.5s, opacity 0.5s linear;
 			-ms-transition: visibility 0s 0.5s, opacity 0.5s linear;
-			-o-transition: visibility 0s 0.5s, opacity 0.5s linear;
+			-o-transition: visibility 0s 0.5s, opacity 0.5s linear;*/
 			transition: visibility 0s 0.5s, opacity 0.5s linear;
 		}
 		.visible {
 			visibility: visible;
 			opacity: 1;
-			-webkit-transition: opacity 0.5s linear;
+			/*-webkit-transition: opacity 0.5s linear;
 			-moz-transition: opacity 0.5s linear;
 			-ms-transition: opacity 0.5s linear;
-			-o-transition: opacity 0.5s linear;
-			transition: opacity 0.5s linear;
+			-o-transition: opacity 0.5s linear;*/
+			/*transition: opacity 0.5s linear;*/
+		}
+		.display_none{
+			display: none;
 		}
 		/*Navbar*/
 		.navbar{
