--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@ html {
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: cover;
+			min-height: 100%;
 			padding-top: 0;
 		}
 
