--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,11 @@ html {
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: cover;
-			min-height: 100%;
+			-o-background-size: cover;
+			-moz-background-size: cover;
+			-webkit-background-size: cover;
+			height: 100%;
+			overflow: hidden;
 			padding-top: 0;
 		}
 
