--- a/css/main.css
+++ b/css/main.css
@@ -1,90 +1,80 @@
 html {
 	height: 100%;
 }
-/*body {
-	background-image: url(../images/key_vision.png);
-	background-repeat: no-repeat;
+html, body{
+	font-family: 'Raleway', Helvetica, Arial, '微軟正黑體', 'Microsoft JhengHei', sans-serif;
+	margin: 0;
+	font-size: 18px;
+}
+body{
+	min-height: 100%;
+}
+h2{
+	font-size: 2rem;
+	text-align: center;
+	margin-bottom: 1em;
+}
+h4{
+	margin: 0;
+	font-size: 1.5rem;
+}
+h2, h4{
+	font-family: inherit;
+	font-weight: 300;
+
+}
+.btn{
+	color: black;
+	display: inline-block;
+	background-color: transparent;
+	border: 1.5px solid;
+	padding: 9px;
+	margin: 20px 0px;
+	border-radius: 5px;
+	font-weight: 400;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	user-select: none;
+	text-decoration: none;
+	transition: background-color 0.1s;
+}
+.btn:hover{
+	color: white;
+	border: 1.5px solid black;
+	background-color: black;
+	text-decoration: none;
+}
+ul{
+	padding-inline-start: 0px;
+	margin-top: 0;
+}
+li{
+	list-style: none;
+}
+.icon{
+	width: 1.2em;
+	margin-right: 0.7em;
+	vertical-align: middle;
+}
+#page-wrapper {
+	background-image: url(../images/key_vision.jpg);
 	background-attachment: fixed;
-	background-position: center;
+	background-position: center center;
+	background-repeat: no-repeat;
 	background-size: cover;
-	}*/
-	/**,
-	*::before,
-	*::after {
-		box-sizing: border-box;
-		}*/
-		html, body{
-			font-family: 'Raleway', Helvetica, Arial, '微軟正黑體', 'Microsoft JhengHei', sans-serif;
-			margin: 0;
-			font-size: 18px;
-		}
-		h2{
-			font-size: 2rem;
-			text-align: center;
-			margin-bottom: 1em;
-		}
-		h4{
-			margin: 0;
-			font-size: 1.5rem;
-		}
-		h2, h4{
-			font-family: inherit;
-			font-weight: 300;
-
-		}
-		.btn{
-			color: black;
-			display: inline-block;
-			background-color: transparent;
-			border: 1.5px solid;
-			padding: 9px;
-			margin: 20px 0px;
-			border-radius: 5px;
-			font-weight: 400;
-			text-align: center;
-			white-space: nowrap;
-			vertical-align: middle;
-			user-select: none;
-			text-decoration: none;
-			transition: background-color 0.1s;
-		}
-		.btn:hover{
-			color: white;
-			border: 1.5px solid black;
-			background-color: black;
-			text-decoration: none;
-		}
-		ul{
-			padding-inline-start: 0px;
-			margin-top: 0;
-		}
-		li{
-			list-style: none;
-		}
-		.icon{
-			width: 1.2em;
-			margin-right: 0.7em;
-			vertical-align: middle;
-		}
-		#page-wrapper {
-			background-image: url(../images/key_vision.jpg);
-			background-attachment: fixed;
-			background-position: center center;
-			background-repeat: no-repeat;
-			background-size: cover;
-			-o-background-size: cover;
-			-moz-background-size: cover;
-			-webkit-background-size: cover;
-			height: 100%;
-			overflow: hidden;
-			padding-top: 0;
-		}
-
-		/*Hide*/
-		.hide{
-			visibility: hidden;
-			/*display: none;*/
-			opacity: 0;
+	-o-background-size: cover;
+	-moz-background-size: cover;
+	-webkit-background-size: cover;
+	height: 100%;
+	overflow: hidden;
+	padding-top: 0;
+}
+/*Hide*/
+.hide{
+	visibility: hidden;
+	/*display: none;*/
+	opacity: 0;
 			/*-webkit-transition: visibility 0s 0.5s, opacity 0.5s linear;
 			-moz-transition: visibility 0s 0.5s, opacity 0.5s linear;
 			-ms-transition: visibility 0s 0.5s, opacity 0.5s linear;
@@ -258,7 +248,7 @@ html {
 
 		/*Banner*/
 		#banner {
-			display: -moz-flex;
+			/*display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
 			display: flex;
@@ -270,11 +260,24 @@ html {
 			-webkit-justify-content: center;
 			-ms-justify-content: center;
 			justify-content: center;
-			cursor: default;
+			cursor: default;*/
 			height: 95vh;
 			overflow: hidden;
 			position: relative;
 			text-align: center;
+		}
+
+		@media (max-width: 576px) {
+			#banner{
+				background-image: url(../images/key_vision.jpg);
+				background-attachment: fixed;
+				background-position: center center;
+				background-repeat: no-repeat;
+				background-size: cover;
+				-o-background-size: cover;
+				-moz-background-size: cover;
+				-webkit-background-size: cover;
+			}
 		}
 /*#banner:before {
 	-moz-pointer-events: none;
@@ -304,8 +307,8 @@ html {
 		padding: 1.3em 0;
 		color: white;
 		width: 580px;
-    	border-top: 3px solid;
-   		border-bottom: 3px solid;
+		border-top: 3px solid;
+		border-bottom: 3px solid;
 		background-color: rgba(220, 177, 90, 0.6);
 		-webkit-animation-name: animatet-inner 2s;
 		animation: animatet-inner 2s;
